--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <p>hey taj!</p>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
